--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -224,6 +224,11 @@ botanicaladdons.tagline.prism=Rainbow lights
 botanicaladdons.page.prism0=One particularly frustrating property of the &1Mana Lens: Flash&0 is its tendency to lock the color of a &1Mana Flash&0 immediately upon making it. Even if you want to make a rainbow &1Flash&0, you'll get one color. By using the power of the &1Rod of the Prismatic Lake&0, you can make that rainbow. It can be tinged with &1Phantom Ink&0, and dyed with any &4Iridescent&0 dye like leather armor.
 botanicaladdons.page.prism1=All the colors of the wind
 
+botanicaladdons.entry.irisDirt=Iridescent Dirt
+botanicaladdons.tagline.irisDirt=Dirt in lots of colors
+botanicaladdons.page.irisDirt0=Using the power of &4Iridescence&0, you can make dirt that shimmers every color of the rainbow. This mystical dirt is capable of growing trees and plants without water or a hoe.
+botanicaladdons.page.irisDirt1=Beauty from the dross
+
 botanicaladdons.entry.awakening=The Ritual of Gaia III
 botanicaladdons.tagline.awakening=Sight, Sound, Strength, Power, Glory, Speed!
 botanicaladdons.page.awakening0=The ritual performed to face off against the soul of the Earth is a incredible challenge, which allows one to obtain &5Relics&0 and &1Gaia Spirits&0. As you fight, this ritual connects you to the &3Divine&0 by your struggles. So, maybe you could... invert that connection? Through that, you would force a fragment of the &3Divine&0 into your &1Priestly Emblem&0.
