--- a/src/main/resources/assets/botanicaladdons/lang/en_US.lang
+++ b/src/main/resources/assets/botanicaladdons/lang/en_US.lang
@@ -35,16 +35,16 @@ item.botanicaladdons:iconStrength.name=Thunder's Force
 item.botanicaladdons:iconPull.name=Chains of Iron
 item.botanicaladdons:iconLightningInfusion.name=Thunder Infusion
 
-enchantment.botanicaladdons.light=Streamlined
-enchantment.botanicaladdons.heavy=Crushing
-
 item.botanicaladdons:iconIridescence.name=Iridescent Tones
 item.botanicaladdons:iconBifrostSphere.name=Wave of Bifrost
 
 item.botanicaladdons:iconIronroot.name=Shield of Roots
 item.botanicaladdons:iconLifemaker.name=Life Catalyst
 
-item.botanicaladdons:iconSuffusion.name=Soul Combination
+enchantment.botanicaladdons.light=Streamlined
+enchantment.botanicaladdons.heavy=Crushing
+
+jei.botanicaladdons.recipe.spellCrafting=Spell Infusion
 
 item.botanicaladdons:spellFocus.name=Terrestrial Focus
 
@@ -225,7 +225,7 @@ botanicaladdons.category.divinity=Divinity
 botanicaladdons.entry.divinityIntro=Divine Faith
 botanicaladdons.tagline.divinityIntro=Kneel before the gods
 botanicaladdons.page.divinityIntro0=Traces of divine work are evident in this world. &4Mana&0, for one. The stuff of magic isn't possibly made by mortal hand. It is only a question of how to connect with these gods.
-botanicaladdons.page.divinityIntro1=The &1Holy Symbol&0 is the needed artifact for this connection, with what seems to be a wild storm of unrealized potential. Although crafted of simple materials, it has a ready acceptance of other magic. This is the gate to the &3Divine&0, and can be used to forge direct connections in the form of a &1Priestly Emblem&0.
+botanicaladdons.page.divinityIntro1=The &1Holy Symbol&0 is the needed artifact for this connection, with what seems to be a wild storm of unrealized potential. Although crafted of simple materials, it has a ready acceptance of other magic. This is the gate to the &3Divine&0, and can be used to forge direct connections in the form of a &1Priestly Emblem&0. Wearing one will grant you more knowledge in this section.
 botanicaladdons.page.divinityIntro2=A key to the zodiac
 botanicaladdons.page.divinityIntro3=The connection the &1Priestly Emblems&0 give you are strong, but don't contain the full power you can harness. An interface to channel the power of a god on earth is required, to allow you to fully command the power you have gained. This interface is the &1Terrestrial Focus&0, a device which can cast &3Divine&0 spells.
 botanicaladdons.page.divinityIntro4=Taking a level in Wizard
@@ -242,6 +242,7 @@ botanicaladdons.tagline.njordSpells=The art of changing flows
 botanicaladdons.page.njordSpells0=The first spell that &3Njord&0's emblem grants, &1Rush of Wind&0, is a simple launching motion. It accelerates the caster in the direction they look, allowing for rudimentary flight. Any device that allows the user to glide seems an interesting combination with this.
 botanicaladdons.page.njordSpells1=The second spell of &3Njord&0, &1Galeforce&0, is a general protection spell. Most beings and projectiles will be pushed back from the player, giving them a sphere of safety.
 botanicaladdons.page.njordSpells2=The third spell of &3Njord&0, &1Sudden Gust&0, allows for corralling animals without harming them. The being the player looks at will be forced back when it's cast, as if the player had hit them.
+botanicaladdons.page.njordSpells3=The final spell of &3Njord&0, &1Tempest Infusion&0, forces the strength of a storm into a shard of the sea, making &1Aquamarine&0. If you can somehow augment your emblem's power, the storm within the shard might be more potent.
 
 botanicaladdons.entry.idunn=Faith in Idunn
 botanicaladdons.tagline.idunn=Life, spring, and immortality
@@ -251,8 +252,7 @@ botanicaladdons.page.idunn1=Ash sunk down of alfen race
 botanicaladdons.entry.idunnSpells=Life Magic
 botanicaladdons.tagline.idunnSpells=The art of growth
 botanicaladdons.page.idunnSpells0=The first spell that &3Idunn&0's emblem grants, &1Shield of Roots&0, is a powerful protection spell. While you have the &1Terrestrial Focus&0, for half a minute you will be unable to move, take, or deal melee damage. Giving the &1Focus&0 to someone else in that time will treat them as if they had been the one to cast the spell.
-botanicaladdons.page.idunnSpells1=The second spell of &3Idunnv, &1Life Catalyst&0, is a spell that focuses on the creation of new life. It can't do this along, though, and requires a physical focus in the world. This is the &1Dendric Suffuser&0. It acts like the Runic Altar, but requires a casting of &1Life Catalyst&0 to begin a crafting operation. Then, instead of &1Livingrock&0, it is completed with an &1Iridescent Sapling&0.
-botanicaladdons.page.idunnSpells2=Rainbow treecare macro-infusion
+botanicaladdons.page.idunnSpells1=The second and final spell of &3Idunn&0, &1Life Catalyst&0, forces power into livingwood, twisting it to become &1Soulroot&0. If you can somehow augment your emblem's power, the root's lifeforce might be more potent.
 
 botanicaladdons.entry.thor=Faith in Thor
 botanicaladdons.tagline.thor=Thunder, strength, and wrath
@@ -264,6 +264,7 @@ botanicaladdons.tagline.thorSpells=The art of war
 botanicaladdons.page.thorSpells0=The first spell that &3Thor&0's emblem grants, &1Lightning Strike&0, is a very simple lightning spell. Electricity will arc out of the caster, striking whatever they're looking at within 10 blocks. This won't do much unless you hit a mob, of course.
 botanicaladdons.page.thorSpells1=The second spell of &3Thor&0, &1Thunder's Force&0, is a strength spell. While you have the &1Terrestrial Focus&0, for half a minute you will hit with over twice the force you'd normally wield. Giving the &1Focus&0 to someone else in that time will treat them as if they had been the one to cast the spell.
 botanicaladdons.page.thorSpells2=The third spell of &3Thor&0, &1Chains of Iron&0, almost seems to intrude upon the domain of &4Movement magic&0. It pulls the mob you look at towards you, as if you were a magnet and it iron. The pulled mob becomes slow for ten seconds, making their escape much harder.
+botanicaladdons.page.thorSpells2=The final spell of &3Thor&0, &1Thunder Infusion&0, forces power into regular iron, making &1Thundersteel&0. If you can somehow augment your emblem's power, the metal might be more potent.
 
 botanicaladdons.entry.heimdall=Faith in Heimdall
 botanicaladdons.tagline.heimdall=Fate, travel, and color
@@ -277,18 +278,33 @@ botanicaladdons.page.heimdallSpells1=The second spell of &3Heimdall&0, &1Wave of
 
 botanicaladdons.entry.toolbelt=Traveller's Toolbelt
 botanicaladdons.tagline.toolbelt=Storage on the go
-botanicaladdons.page.toolbelt0=&3Heimdall&0, being a god of Travellers, provides tools to his devotees to make travels easier. One of these useful tools is the &1Traveller's Toolbelt&0. Instead of rushing from place to place like some botanist's belts do, this toolbelt holds items, allowing you to prepare for any eventuality. After all, it's nice to just take some time to appreciate the wonders of the world in your travels.
+botanicaladdons.page.toolbelt0=&3Heimdall&0, being a god of travellers, provides tools to his devotees to make travels easier. One of these useful tools is the &1Traveller's Toolbelt&0. Instead of rushing from place to place like some botanist's belts do, this toolbelt holds items, allowing you to prepare for any eventuality. After all, it's nice to just take some time to appreciate the wonders of the world in your travels.
 botanicaladdons.page.toolbelt1=Journey before destination
+
+botanicaladdons.entry.foodbelt=Traveller's Ration Belt
+botanicaladdons.tagline.foodbelt=A second mouth
+botanicaladdons.page.foodbelt0=&3Heimdall&0, being a god of travellers, provides tools to his devotees to make travels easier. One of these useful tools is the &1Traveller's Ration Belt&0. Instead of rushing from place to place like some botanist's belts do, this toolbelt will automatically sate your stomach from food in your hotbar, allowing you to focus more on the journey.
+botanicaladdons.page.foodbelt1=Strength before weakness
 
 botanicaladdons.entry.travelStone=Traveller's Flowstone
 botanicaladdons.tagline.travelStone=A component sash
-botanicaladdons.page.travelStone0=&3Heimdall&0, being a god of Travellers, provides tools to his devotees to make travels easier. One of these useful tools is the &1Traveller's Flowstone&0. As a pair to the &1Traveller's Toolbelt&0, it gives you the little quirks that make the &1Sashes&0 so useful without sacrificing leisure. Specifically, it makes you jump higher and scale small walls.
-botanicaladdons.page.travelStone1=Strength before weakness
+botanicaladdons.page.travelStone0=&3Heimdall&0, being a god of travellers, provides tools to his devotees to make travels easier. One of these useful tools is the &1Traveller's Flowstone&0. As a traveller may use belts other than the &1Sashes&0, it gives you the little quirks that make those belts so useful without sacrificing leisure. Specifically, it makes you jump higher and scale small walls.
+botanicaladdons.page.travelStone1=Life before death
+
+botanicaladdons.entry.findStone=Traveller's Waystone
+botanicaladdons.tagline.findStone=GPS
+botanicaladdons.page.findStone0=&3Heimdall&0, being a god of travellers, provides tools to his devotees to make travels easier. One of these useful tools is the &1Traveller's Waystone&0. It can be bound to a point or named &otrack:&0 and a player's name to track that player, and will give you an indication of what direction to go as long as you're holding it, allowing for easy travels home or to a friend.
+botanicaladdons.page.findStone1=Remember those who have been forgotten
 
 botanicaladdons.entry.star=Frozen Stars
 botanicaladdons.tagline.star=An ender light source
 botanicaladdons.page.star0=The &1Frozen Star&0 is the light and form of the stars, trapped upon earth, and given form through &4Iridescence&0. They are relatively cheap light sources, and give off light with the same strength as &1Glowstone&0. They can be made in any of the colors of &4Iridescence&0.
 botanicaladdons.page.star1=Find Polaris to find your way
+
+botanicaladdons.entry.shard=Iridescent Shards
+botanicaladdons.tagline.shard=Mana-powered dye
+botanicaladdons.page.shard0=The &1Iridescent Shard&0 is a refined form of the crystals produced by the &1Iridescent Tones&0. It can output its dye for as long as it has mana, and can be recharged in a pool.
+botanicaladdons.page.shard1=Double rainbows
 
 botanicaladdons.entry.prism=Rod of the Prismatic Lake
 botanicaladdons.tagline.prism=Rainbow lights
